--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
     "styled": "^1.0.0",
+    "styled-components": "^6.1.8",
     "swagger-ui": "^5.12.0",
     "swagger-ui-react": "^5.12.0",
     "web-vitals": "^2.1.4"
