--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3000 react-scripts start --max-old-space-size=4096",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
