--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "docker": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "quill": "^2.0.1",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module": "^3.0.0",
