--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
-    "docker": "^1.0.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "quill": "^2.0.1",
@@ -29,19 +28,17 @@
     "react-scripts": "^5.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
-    "redux": "^5.0.1",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^3.1.0",
     "styled": "^1.0.0",
     "styled-components": "^6.1.8",
     "swagger-ui": "^5.12.0",
     "swagger-ui-react": "^5.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "proxy" : "http://3.39.190.90"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "node --max-old-space-size=4096 node_modules/.bin/react-scripts start",
+    "build": "node --max-old-space-size=4096 node_modules/.bin/react-scripts build",
+    "test": "node --max-old-space-size=4096 node_modules/.bin/react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
