--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "aws-sdk": "^2.1633.0",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "quill": "^2.0.1",
@@ -14,13 +12,10 @@
     "quill-image-resize-module": "^3.0.0",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
-    "react-diff-viewer": "^3.1.1",
-    "react-diff-viewer-continued": "^3.4.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-js-pagination": "^3.0.3",
-    "react-native-vision-camera": "^3.9.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
@@ -32,13 +27,12 @@
     "styled-components": "^6.1.8",
     "swagger-ui": "^5.12.0",
     "swagger-ui-react": "^5.12.0",
-    "web-vitals": "^2.1.4",
-    "proxy" : "http://3.39.190.90"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "node --max-old-space-size=4096 node_modules/.bin/react-scripts start",
-    "build": "node --max-old-space-size=4096 node_modules/.bin/react-scripts build",
-    "test": "node --max-old-space-size=4096 node_modules/.bin/react-scripts test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -65,3 +59,4 @@
     "prettier": "^3.2.5"
   }
 }
+
