--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.6.7",
     "aws-sdk": "^2.1633.0",
+    "axios": "^1.6.7",
+    "core-js": "^3.38.1",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "quill": "^2.0.1",
@@ -54,9 +55,21 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.25.4",
+    "babel-loader": "^9.1.3",
     "eslint-plugin-flowtype": "^8.0.3",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "webpack": "^5.94.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      "@babel/plugin-transform-runtime"
+    ]
   }
 }
-
