--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-js-pagination": "^3.0.3",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-responsive": "^9.0.2",
