--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-sdk": "^2.1633.0",
+    "aws-sdk": "^2.1691.0",
     "axios": "^1.6.7",
     "core-js": "^3.38.1",
+    "nginx": "^1.0.8",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "quill": "^2.0.1",
@@ -23,6 +24,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
+    "reactstrap": "^9.2.3",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "styled": "^1.0.0",
